--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,13 +1,17 @@
 /*Contacts*/
+
 .contacts__list-item:not(:last-child) {
-  margin-right: 30px;
+  // desctop
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+  }
 }
 
 .contacts__link {
   @include positionFlex($jc: flex-start);
 
-  gap: 10px;
-  padding: 32px 0 31px 0;
+  gap: 8px;
+  padding: 5px 0;
 
   color: var(--primary-text-color);
   font-weight: 500;
@@ -21,8 +25,30 @@
   &:focus {
     color: var(--accent-color);
   }
+
+  // desctop
+  @media screen and (min-width: 1200px) {
+    gap: 10px;
+    padding: 32px 0 31px 0;
+  }
 }
 
 .contacts__icon {
   fill: currentColor;
+
+  &--horizontal {
+    @media screen and (max-width: 1199px) {
+      @include positionFlex($ai: flex-start);
+      height: 10px;
+      width: 14px;
+    }
+  }
+
+  &--vertical {
+    @media screen and (max-width: 1199px) {
+      @include positionFlex($ai: flex-start);
+      height: 14px;
+      width: 10px;
+    }
+  }
 }
