--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -3,14 +3,20 @@
   color: var(--rare-text-color);
   font-family: var(--logo-font-family), sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: calc(31 / 26);
+  font-size: 24px;
+  line-height: calc(28 / 24);
 
   @include transition(color);
 
   &:hover,
   &:focus {
     color: var(--accent-color);
+  }
+
+  // desctop
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    line-height: calc(31 / 26);
   }
 }
 
