--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -1,11 +1,26 @@
 /* Placeholders */
 
 %container {
-  width: 1200px;
+  min-width: 320px;
   padding-right: 15px;
   padding-left: 15px;
   margin-left: auto;
   margin-right: auto;
+
+  // mobile
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+
+  // tablet
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  // desctop
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
 
 %section {
