--- a/css/main.css
+++ b/css/main.css
@@ -927,4 +927,323 @@ body {
   .hero__button {
     min-width: 216px;
   }
+}
+
+/* Backdrop */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--backdrop-bgc);
+  opacity: 1;
+  visibility: visible;
+  -webkit-perspective: 600px;
+          perspective: 600px;
+  -webkit-transition-property: opacity, visibility;
+  transition-property: opacity, visibility;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop--is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  width: 450px;
+  padding: 40px;
+  background-color: var(--primary-bgc);
+  -webkit-box-shadow: var(--container-shadow);
+          box-shadow: var(--container-shadow);
+  border-radius: 4px;
+}
+@media screen and (max-width: 449px) {
+  .modal {
+    width: 100vw;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+  }
+}
+
+.modal__container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
+  -webkit-transition-property: opacity, -webkit-transform;
+  transition-property: opacity, -webkit-transform;
+  transition-property: opacity, transform;
+  transition-property: opacity, transform, -webkit-transform;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop--is-hidden .modal__container {
+  opacity: 0;
+  -webkit-transform: translate(-50%, -50%) scale(0) rotateY(90deg);
+          transform: translate(-50%, -50%) scale(0) rotateY(90deg);
+}
+
+.modal__close-cross {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+}
+
+.modal__title {
+  display: block;
+  margin-bottom: 12px;
+  text-align: center;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  color: var(--title-text-color);
+}
+@media screen and (min-width: 1200px) {
+  .modal__title {
+    line-height: 1.5;
+  }
+}
+
+.modal__group {
+  margin-bottom: 20px;
+}
+
+.modal__label {
+  display: block;
+  font-size: 12px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.01em;
+  color: var(--primary-text-color);
+  margin-bottom: 4px;
+}
+
+.modal__wrapper {
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.modal__field {
+  width: 100%;
+  height: 40px;
+  padding-left: 42px;
+  padding-right: 42px;
+  font-size: 14px;
+  line-height: 1.1428571429;
+  color: var(--title-text-color);
+  border: 1px solid var(--modal-form-border-color);
+  border-radius: 4px;
+  outline: 1px solid transparent;
+  outline-offset: -1px;
+  -webkit-transition-property: outline;
+  transition-property: outline;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__field:focus {
+  outline-color: var(--accent-color);
+}
+
+.modal__icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition-property: fill;
+  transition-property: fill;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal__field:focus + .modal__icon {
+  fill: var(--accent-color);
+}
+
+.modal__message {
+  display: block;
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+  font-size: 14px;
+  line-height: 1.1428571429;
+  color: var(--title-text-color);
+  border: 1px solid var(--modal-form-border-color);
+  border-radius: 4px;
+  outline: 1px solid transparent;
+  outline-offset: -1px;
+  -webkit-transition-property: outline;
+  transition-property: outline;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  resize: none;
+}
+.modal__message:focus {
+  outline-color: var(--accent-color);
+}
+.modal__message::-webkit-input-placeholder {
+  font-size: 14px;
+  line-height: 1.1428571429;
+  letter-spacing: 0.01em;
+  color: var(--modal-form-messge-placeholder-color);
+}
+.modal__message::-moz-placeholder {
+  font-size: 14px;
+  line-height: 1.1428571429;
+  letter-spacing: 0.01em;
+  color: var(--modal-form-messge-placeholder-color);
+}
+.modal__message:-ms-input-placeholder {
+  font-size: 14px;
+  line-height: 1.1428571429;
+  letter-spacing: 0.01em;
+  color: var(--modal-form-messge-placeholder-color);
+}
+.modal__message::-ms-input-placeholder {
+  font-size: 14px;
+  line-height: 1.1428571429;
+  letter-spacing: 0.01em;
+  color: var(--modal-form-messge-placeholder-color);
+}
+.modal__message::placeholder {
+  font-size: 14px;
+  line-height: 1.1428571429;
+  letter-spacing: 0.01em;
+  color: var(--modal-form-messge-placeholder-color);
+}
+
+.modal__agreement {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+  margin-bottom: 30px;
+}
+
+.modal__agreement-desc,
+.modal__agreement-link {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  font-size: 12px;
+  line-height: 1.1666666667;
+  color: var(--primary-text-color);
+}
+@media screen and (min-width: 1200px) {
+  .modal__agreement-desc,
+.modal__agreement-link {
+    font-size: 14px;
+    line-height: 1.7142857143;
+  }
+}
+
+.modal__agreement-link {
+  color: var(--accent-color);
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  -webkit-text-decoration-skip-ink: none;
+          text-decoration-skip-ink: none;
+}
+
+.modal__button {
+  display: block;
+  -webkit-box-shadow: var(--btn-shadow);
+          box-shadow: var(--btn-shadow);
+  min-width: 200px;
+  min-height: 50px;
+  padding: 10px 0;
+  margin: 0 auto;
+}
+
+/* Close-cross */
+.close-cross {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border-radius: 50%;
+  border: 1px solid var(--close-cross-border-color);
+  -webkit-transition-property: border-color, color;
+  transition-property: border-color, color;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.close-cross:hover, .close-cross:focus {
+  color: var(--accent-color);
+}
+
+.close-cross__icon {
+  fill: currentColor;
+}
+
+/* Checkbox */
+.checkbox__container {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.checkbox__input {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  width: 16px;
+  height: 15px;
+  outline: 2px solid transparent;
+  outline-offset: -2px;
+  border: 2px solid var(--modal-form-check-border-color);
+  border-radius: 2px;
+  -webkit-transition-property: outline, background-color;
+  transition-property: outline, background-color;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox__input:checked {
+  outline: 2px solid var(--accent-color);
+  background-color: var(--accent-color);
+}
+
+.checkbox__icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  pointer-events: none;
+  fill: var(--secondary-text-color);
 }/*# sourceMappingURL=main.css.map */
