--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,7 +14,7 @@
 @import './components/logo';
 @import './components/navigation';
 @import './components/contacts';
-@import './components/menu';
+@import './components/mobile-menu';
 @import './components/hero';
 // @import './components/heading';
 // @import './components/features';
@@ -28,10 +28,10 @@
 // @import './components/address';
 // @import './components/folowing';
 // @import './components/form';
-// @import './components/backdrop';
-// @import './components/modal';
-// @import './components/close-cross';
-// @import './components/checkbox';
+@import './components/backdrop';
+@import './components/modal';
+@import './components/close-cross';
+@import './components/checkbox';
 // @import './components/portfolio';
 // @import './components/filter';
 // @import './components/product';
