--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -2,20 +2,46 @@
   padding-top: 118px;
   padding-bottom: 118px;
   margin: 0 auto;
+  max-width: 480px;
+  height: 400px;
 
   background-color: var(--hero-bgc);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 480px 400px;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/mobile/hero-bg-480.jpg);
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/mobile/hero-bg-480@2x.jpg);
+  }
 
-  // background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-  //   url(../images/hero-bg.jpg);
+  // tablet
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+    height: 400px;
+    background-size: 768px 400px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/tablet/hero-bg-768.jpg);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../images/tablet/hero-bg-768@2x.jpg);
+    }
+  }
 
   // desctop
   @media screen and (min-width: 1200px) {
     padding-top: 200px;
     padding-bottom: 200px;
     max-width: 1600px;
+    height: 600px;
+    background-size: 1600px 600px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/desktop/hero-bg-1600.jpg);
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../images/desktop/hero-bg-1600@2x.jpg);
+    }
   }
 }
 
