--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -1,6 +1,11 @@
 /* Works */
 .works {
   @extend %section;
+
+  // desktop
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
 }
 
 .works__list {
