--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,7 @@
 @import './base/normalize';
 @import './base/reset';
 @import './base/base';
-// @import './base/card-set';
+@import './base/card-set';
 
 // * Components-styles
 @import './components/container';
@@ -16,13 +16,13 @@
 @import './components/contacts';
 @import './components/mobile-menu';
 @import './components/hero';
-// @import './components/heading';
-// @import './components/features';
-// @import './components/works';
-// @import './components/overlay';
-// @import './components/team';
-// @import './components/team-member';
-// @import './components/social';
+@import './components/heading';
+@import './components/features';
+@import './components/works';
+@import './components/overlay';
+@import './components/team';
+@import './components/team-member';
+@import './components/social';
 // @import './components/clients';
 // @import './components/footer';
 // @import './components/address';
@@ -32,6 +32,6 @@
 @import './components/modal';
 @import './components/close-cross';
 @import './components/checkbox';
-// @import './components/portfolio';
-// @import './components/filter';
-// @import './components/product';
+@import './components/portfolio';
+@import './components/filter';
+@import './components/product';
