--- a/sass/components/_heading.scss
+++ b/sass/components/_heading.scss
@@ -1,10 +1,18 @@
 /* Heading */
 .heading {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 
   font-weight: 700;
-  font-size: 36px;
-  line-height: calc(42 / 36);
+  font-size: 28px;
+  line-height: calc(33 / 28);
   text-align: center;
   color: var(--title-text-color);
+
+  // desctop
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+
+    font-size: 36px;
+    line-height: calc(42 / 36);
+  }
 }
