--- a/sass/components/_folowing.scss
+++ b/sass/components/_folowing.scss
@@ -1,4 +1,17 @@
 /* Following */
+.following {
+  text-align: center;
+
+  // mobile
+  @media screen and (max-width: 767px) {
+    margin-bottom: 60px;
+  }
+
+  // desktop
+  @media screen and (min-width: 1200px) {
+    text-align: start;
+  }
+}
 .following__title {
   margin-bottom: 20px;
 
