--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -1,12 +1,21 @@
 /* Filter */
 .portfolio__filter {
-  @include positionFlex($ai: flex-start);
+  @include positionFlex($jc: flex-start);
+  flex-wrap: wrap;
+  row-gap: 15px;
+  column-gap: 8px;
+  margin-bottom: 40px;
 
-  margin-bottom: 50px;
-}
+  // tablet
+  @media screen and (min-width: 768px) {
+    @include positionFlex();
+    margin-bottom: 30px;
+  }
 
-.filter__list-item:not(:last-child) {
-  margin-right: 8px;
+  // desktop
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 
 .filter__button {
