--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,6 @@
 @import './base/normalize';
 @import './base/reset';
 @import './base/base';
-@import './base/card-set';
 
 // * Components-styles
 @import './components/container';
@@ -23,15 +22,16 @@
 @import './components/team';
 @import './components/team-member';
 @import './components/social';
-// @import './components/clients';
-// @import './components/footer';
-// @import './components/address';
-// @import './components/folowing';
-// @import './components/form';
+@import './components/clients';
+@import './components/footer';
+@import './components/address';
+@import './components/folowing';
+@import './components/form';
 @import './components/backdrop';
 @import './components/modal';
 @import './components/close-cross';
 @import './components/checkbox';
 @import './components/portfolio';
 @import './components/filter';
+@import './components/card-set';
 @import './components/product';
