--- a/css/main.css
+++ b/css/main.css
@@ -470,7 +470,7 @@ body {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.button--primary:hover, .button--primary:focus {
+.button--primary:active, .button--primary:hover, .button--primary:focus {
   background-color: var(--button-active-color);
 }
 
@@ -490,7 +490,7 @@ body {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.button--secondary:hover, .button--secondary:focus {
+.button--secondary:active, .button--secondary:hover, .button--secondary:focus {
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   color: var(--secondary-text-color);
@@ -601,7 +601,7 @@ body {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.logo:hover, .logo:focus {
+.logo:active, .logo:hover, .logo:focus {
   color: var(--accent-color);
 }
 @media screen and (min-width: 1200px) {
@@ -707,7 +707,7 @@ body {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contacts__link:hover, .contacts__link:focus {
+.contacts__link:active, .contacts__link:hover, .contacts__link:focus {
   color: var(--accent-color);
 }
 @media screen and (min-width: 1200px) {
@@ -748,166 +748,6 @@ body {
             align-items: flex-start;
     height: 14px;
     width: 10px;
-  }
-}
-
-.menu-toggle {
-  min-height: 40px;
-  min-width: 40px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-left: auto;
-  background-color: transparent;
-  color: var(--title-text-color);
-  outline: none;
-}
-@media (min-width: 768px) {
-  .menu-toggle {
-    display: none;
-  }
-}
-
-.menu-toggle__icon {
-  fill: currentColor;
-}
-
-.mobile-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 100vw;
-  height: 100vh;
-  padding: 48px 40px;
-  background-color: var(--primary-bgc);
-  z-index: 999;
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  -webkit-transform: translateY(-100%);
-          transform: translateY(-100%);
-  -webkit-transition-property: -webkit-transform;
-  transition-property: -webkit-transform;
-  transition-property: transform;
-  transition-property: transform, -webkit-transform;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.mobile-menu.is-open {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
-}
-
-.mobile-menu__btn-close {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  display: block;
-  min-height: 40px;
-  min-width: 40px;
-  background-color: transparent;
-  color: var(--title-text-color);
-  outline: none;
-  -webkit-transition-property: color;
-  transition-property: color;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-@media screen and (max-width: 767px) {
-  .mobile-menu__btn-close:active {
-    color: var(--accent-color);
-  }
-}
-
-.mobile-menu_btn-close-icon {
-  fill: currentColor;
-}
-
-.mobile-menu__nav {
-  margin-bottom: auto;
-}
-
-.mobile-menu__nav-item:not(:last-child) {
-  margin-bottom: 32px;
-}
-
-.mobile-menu__nav-link {
-  display: block;
-  font-size: 40px;
-  line-height: 1.175;
-  color: var(--title-text-color);
-}
-.mobile-menu__nav-link--current {
-  color: var(--accent-color);
-}
-
-.mobile-menu__contacts {
-  margin-bottom: 64px;
-}
-
-.mobile-menu__contacts-item:not(:last-child) {
-  margin-bottom: 32px;
-}
-
-.mobile-menu__contacts-link {
-  font-size: 24px;
-  line-height: 1.1666666667;
-  color: var(--primary-text-color);
-}
-.mobile-menu__contacts-link--accent {
-  font-size: 34px;
-  line-height: 1.1764705882;
-  color: var(--accent-color);
-}
-@media (max-width: 371px) {
-  .mobile-menu__contacts-link--accent {
-    font-size: 8.7vw;
-  }
-}
-
-.mobile-menu__socials {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 20px;
-}
-
-.mobile-menu__socials-item {
-  position: relative;
-}
-.mobile-menu__socials-item:not(:last-child)::after {
-  content: "";
-  position: absolute;
-  right: -10px;
-  width: 1px;
-  height: 22px;
-  background-color: var(--modal-form-border-color);
-}
-
-.mobile-menu__socials-link {
-  font-size: 18px;
-  line-height: 1.2222222222;
-  color: var(--accent-color);
-}
-@media (max-width: 440px) {
-  .mobile-menu__socials-link {
-    font-size: 3.44vw;
   }
 }
 
@@ -1582,6 +1422,7 @@ body {
   visibility: visible;
   -webkit-perspective: 600px;
           perspective: 600px;
+  overflow-y: auto;
   -webkit-transition-property: opacity, visibility;
   transition-property: opacity, visibility;
   -webkit-transition-duration: 250ms;
@@ -1887,6 +1728,167 @@ body {
           transform: translate(-50%, -50%);
   pointer-events: none;
   fill: var(--secondary-text-color);
+}
+
+.menu-toggle {
+  min-height: 40px;
+  min-width: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: auto;
+  background-color: transparent;
+  color: var(--title-text-color);
+  outline: none;
+}
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+
+.menu-toggle__icon {
+  fill: currentColor;
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 40px;
+  background-color: var(--primary-bgc);
+  z-index: 999;
+  overflow: auto;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  -webkit-transform: translateY(-150%);
+          transform: translateY(-150%);
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-menu.is-open {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.mobile-menu__btn-close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  display: block;
+  min-height: 40px;
+  min-width: 40px;
+  background-color: transparent;
+  color: var(--title-text-color);
+  outline: none;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 767px) {
+  .mobile-menu__btn-close:active {
+    color: var(--accent-color);
+  }
+}
+
+.mobile-menu_btn-close-icon {
+  fill: currentColor;
+}
+
+.mobile-menu__nav {
+  margin-bottom: auto;
+}
+
+.mobile-menu__nav-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu__nav-link {
+  display: block;
+  font-size: 40px;
+  line-height: 1.175;
+  color: var(--title-text-color);
+}
+.mobile-menu__nav-link--current {
+  color: var(--accent-color);
+}
+
+.mobile-menu__contacts {
+  margin-bottom: 64px;
+}
+
+.mobile-menu__contacts-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu__contacts-link {
+  font-size: 24px;
+  line-height: 1.1666666667;
+  color: var(--primary-text-color);
+}
+.mobile-menu__contacts-link--accent {
+  font-size: 34px;
+  line-height: 1.1764705882;
+  color: var(--accent-color);
+}
+@media (max-width: 371px) {
+  .mobile-menu__contacts-link--accent {
+    font-size: 8.7vw;
+  }
+}
+
+.mobile-menu__socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+}
+
+.mobile-menu__socials-item {
+  position: relative;
+}
+.mobile-menu__socials-item:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  right: -10px;
+  width: 1px;
+  height: 22px;
+  background-color: var(--modal-form-border-color);
+}
+
+.mobile-menu__socials-link {
+  font-size: 18px;
+  line-height: 1.2222222222;
+  color: var(--accent-color);
+}
+@media (max-width: 440px) {
+  .mobile-menu__socials-link {
+    font-size: 3.44vw;
+  }
 }
 
 /* Portfolio */ /* Filter */
