--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -21,6 +21,7 @@
 
   @include transition(background-color);
 
+  &:active,
   &:hover,
   &:focus {
     background-color: var(--button-active-color);
@@ -38,6 +39,7 @@
 
   @include transition(background-color, color, box-shadow);
 
+  &:active,
   &:hover,
   &:focus {
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
