--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -32,16 +32,17 @@
   padding: 48px 40px;
   background-color: var(--primary-bgc);
   z-index: 999;
+  overflow: auto;
 
   font-weight: 500;
   letter-spacing: 0.02em;
 
-  transform: translateY(-100%);
+  transform: translateY(-150%);
 
   @include transition(transform);
 
   &.is-open {
-    transform: translateX(0);
+    transform: translateY(0);
   }
 }
 
