--- a/css/main.css
+++ b/css/main.css
@@ -1773,7 +1773,7 @@ body {
   padding: 48px 40px;
   background-color: var(--primary-bgc);
   z-index: 999;
-  overflow: auto;
+  overflow-y: auto;
   font-weight: 500;
   letter-spacing: 0.02em;
   -webkit-transform: translateY(-150%);
