--- a/css/main.css
+++ b/css/main.css
@@ -421,6 +421,9 @@ body {
   font-family: var(--primary-font-family), sans-serif;
   letter-spacing: 0.03em;
 }
+body.no-scroll {
+  overflow: hidden;
+}
 
 /* Container */
 .container {
