--- a/css/main.css
+++ b/css/main.css
@@ -759,11 +759,10 @@ body.no-scroll {
   padding-bottom: 118px;
   margin: 0 auto;
   max-width: 480px;
-  height: 400px;
   background-color: var(--hero-bgc);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 480px 400px;
+  background-size: cover;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/mobile/hero-bg-480.jpg);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/mobile/hero-bg-480.jpg);
 }
@@ -776,8 +775,7 @@ body.no-scroll {
 @media screen and (min-width: 768px) {
   .hero {
     max-width: 768px;
-    height: 400px;
-    background-size: 768px 400px;
+    background-size: cover;
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/tablet/hero-bg-768.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/tablet/hero-bg-768.jpg);
   }
@@ -793,8 +791,7 @@ body.no-scroll {
     padding-top: 200px;
     padding-bottom: 200px;
     max-width: 1600px;
-    height: 600px;
-    background-size: 1600px 600px;
+    background-size: cover;
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/desktop/hero-bg-1600.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/desktop/hero-bg-1600.jpg);
   }
