--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,12 +3,10 @@
   padding-bottom: 118px;
   margin: 0 auto;
   max-width: 480px;
-  height: 400px;
-
   background-color: var(--hero-bgc);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 480px 400px;
+  background-size: cover;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../images/mobile/hero-bg-480.jpg);
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
@@ -19,8 +17,7 @@
   // tablet
   @media screen and (min-width: 768px) {
     max-width: 768px;
-    height: 400px;
-    background-size: 768px 400px;
+    background-size: cover;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url(../images/tablet/hero-bg-768.jpg);
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
@@ -34,8 +31,7 @@
     padding-top: 200px;
     padding-bottom: 200px;
     max-width: 1600px;
-    height: 600px;
-    background-size: 1600px 600px;
+    background-size: cover;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url(../images/desktop/hero-bg-1600.jpg);
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
