--- a/sass/components/_card-set.scss
+++ b/sass/components/_card-set.scss
@@ -19,10 +19,9 @@
 
   // tablet
   @media screen and (min-width: 768px) {
-    display: inline-flex;
-
+    display: flex;
     --items: 2;
-    flex-basis: calc((100% - (var(--indent) * (var(--items) - 1))) / var(--items));
+    flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
   }
 
   // desktop
