--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -32,10 +32,8 @@
 
   // tablet
   @media screen and (min-width: 768px) {
-    display: inline-flex;
-
     --items: 2;
-    flex-basis: calc((100% - (var(--indent) * (var(--items) - 1))) / var(--items));
+    flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
   }
 
   // desktop
