--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -11,6 +11,11 @@
   perspective: 600px;
   overflow-y: auto;
 
+  // mobile
+  @media screen and (max-height: 594px) {
+    overflow: scroll;
+  }
+
   @include transition(opacity, visibility);
 
   &--is-hidden {
